--- a/Lab1/css/styles.css
+++ b/Lab1/css/styles.css
@@ -1,1 +1,150 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Marck Script', cursive;
+  font-size: 16px;
+  color: #2c2c2c;
+  line-height: 1.6;
+  background: linear-gradient(to bottom right, white, #caf0f8);
+}
+
+header {
+  padding: 25px 20px;
+  background: linear-gradient(to right, #0077b6, #03045e);
+  text-align: center;
+  
+}
+
+header h1,
+header h2 {
+  font-size: 36px;
+  margin-bottom: 10px;
+  color: white;
+}
+
+nav a {
+  margin: 0 15px;
+  text-decoration: none;
+  font-size: 20px;
+  color: white;
+  
+}
+
+nav a:hover {
+  color: #03045e;
+  
+}
+
+main {
+  padding: 30px 20px;
+  max-width: 1200px;
+  margin: auto;
+}
+
+section {
+  margin-bottom: 60px;
+}
+
+h2 {
+  font-size: 26px;
+  margin-bottom: 20px;
+  color: #03045e;
+  padding-left: 25px;
+  gap: 8px;
+}
+
+h3 {
+    color: #03045e;
+}
+
+img {
+  width: 70%;
+  height: auto;
+  border-radius: 12px;
+  margin-bottom: 20px;
+}
+
+#advantages ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+#advantages ul li {
+  background: #0077b6;
+  color: white;
+  margin: 8px 0;
+  padding: 12px 15px;
+  border-radius: 10px;
+  align-items: center;
+  gap: 10px;
+}
+
+#advantages ul li:hover {
+  background: #03045e;
+}
+
+
+.menu-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin: 1.5rem 0;
+  border-radius: 14px;
+  overflow: hidden;
+  background: white;
+}
+
+.menu-table th,
+.menu-table td {
+  padding: 1.2rem;
+  text-align: left;
+  border-bottom: 1px solid #caf0f8;
+}
+
+.menu-table th {
+  background: #03045e;
+  color: white;
+  font-weight: 500;
+  font-size: 18px;
+}
+
+.menu-table tr:nth-child(even) {
+  background-color: #d1f7ff;
+}
+
+.menu-table tr:hover {
+  background-color: #bbdefb;
+}
+
+.menu-table td:first-child {
+  font-weight: bold;
+  color: #03045e;
+}
+
+.price {
+  color: #03045e;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+
+
+footer {
+  padding: 20px;
+  background-color: #03045e;
+  color: white;
+  text-align: center;
+  margin-top: 50px;
+}
+
+footer a {
+  color: #00b4d8;
+  text-decoration: none;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
 
